--- a/HTML/practice q/qs3.html
+++ b/HTML/practice q/qs3.html
@@ -6,32 +6,48 @@
     <title>portfolio</title>
 </head>
 <body>
+    <header>
     <h1>Md Irfan</h1>
     <p>I love to play AAA, Open world, story mode games.</p>
 
     <img src="https://media.licdn.com/dms/image/D5603AQFQiKhcTTvGKQ/profile-displayphoto-shrink_200_200/0/1665214015978?e=1702512000&v=beta&t=XASMfw7ag3afp2aF_IyiF8O24Y5rICuslzbxeFnl5_M" alt="my pic">
 
+    </header>
+    <hr>
+     <section>
     <h2>Education</h2>
     <ul>
-        <li><b>Class 10th</b> : 50%</li>
-        <li><b>Class 12th</b> : 61%</li>
-        <li><b>College</b> &nbsp;   &nbsp;  &nbsp;: 80% </li>
+        <li><b>Class 10 <sup>th</sup> </b> : 50%</li>
+        <li><b>Class 12 <sup>th</sup></b> : 61%</li>
+        <li><b>College</b>  &nbsp;    &nbsp;   &nbsp;: 80% </li>
     </ul>
-   
-    <h2>Skills</h2>
-   <ul>
-    <li>HTLM, CSS, JavaScript</li>
-    <li>C, C++, Python</li>
-    <li>Cybersecurity tools</li>
-    <li>Linux, Bash, Git</li>
-   </ul>
 
+    <hr>
+    </section>
+   
+    <section>
+    <h2>Skills</h2>
+        <ul>
+          <li>HTLM, CSS, JavaScript</li>
+          <li>C, C++, Python</li>
+          <li>Cybersecurity tools</li>
+          <li>Linux, Bash, Git</li>
+        </ul>
+
+     <hr>
+    </section>
+
+    <section>
    <h2>Hobbies</h2>
    <ul>
     <li>Reading(Psychology, Money</li>
     <li>Gaming</li>
    </ul>
 
+   <hr>
+
+   </section>
+   <footer>
    <h2>Contact Me</h2>
    <ul>
     <li>Email: iamhero337@gmail.com</li>
@@ -39,5 +55,6 @@
     <li><a href="https://github.com/Iamhero337">Github</a></li>
    </ul>
 
+   <h3>Made by <b>Hero</b></h3></footer>
 </body>
 </html>
