--- a/HTML/practice q/qs3.html
+++ b/HTML/practice q/qs3.html
@@ -47,6 +47,14 @@
    <hr>
 
    </section>
+   <section>
+    <h2>Achivemnts</h2>
+    <ul>
+        <li>1st prize in the College tech competetion.</li>
+        <p>I lead a team of 5 to the trophy.</p>
+    </ul>
+    <hr>
+   </section>
    <footer>
    <h2>Contact Me</h2>
    <ul>
@@ -54,6 +62,8 @@
     <li><a href="https://www.linkedin.com/in/iamhero337/">Linkedin</a></li>
     <li><a href="https://github.com/Iamhero337">Github</a></li>
    </ul>
+
+   
 
    <h3>Made by <b>Hero</b></h3></footer>
 </body>
