--- a/HTML/input.html
+++ b/HTML/input.html
@@ -6,6 +6,7 @@
     <title>Inputs</title>
 </head>
 <body>
+    <form action="/server">
     <div>
         <label for="username">Username: </label>
         <input type="text" id="username" placeholder="Username">
@@ -18,6 +19,10 @@
     </div>
 
     <button>Submit</button>
+    <button type="submit">Submit</button>
+    <button type="reset">Reset data</button>
+    <button type="button">useless</button>
+    </form>
     
 </body>
 </html>
